<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WandDeuze</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="chargerid">Serial number</string>
    <string name="preferences">Preferences</string>
    <string name="connecttimeout">Wifi connection time out (seconds)</string>
    <string name="connected">Connected</string>
    <string name="no_chargerdata">Received data has no chargerData.</string>
    <string name="no_configdata">Received data has no configData.</string>
    <string name="data_not_received">Data not received from wallbox.</string>
    <string name="some_message">Waiting for reply…</string>
    <string name="locked">Locked</string>
    <string name="unlocked">UnLocked</string>
    <string name="pauze">Pauze</string>
    <string name="resume">Resume</string>
    <string name="change_charge_current">Change charge current</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="log_to_logcat">AndroidStudio Logcat</string>
    <string name="log_to_file">Record data in LogThis.txt</string>
    <string name="plugged_in">Plugged in</string>
    <string name="status_ready">Ready.</string>
    <string name="status_wait_next_schedule">Connected: waiting for next schedule to start.</string>
    <string name="status_wait_car_demand">Connected: waiting for car demand.</string>
    <string name="status_paused">Paused by user.</string>
    <string name="status_power_boost_waiting">Connected, PowerBoost reports:\nNOT ENOUGH POWER AVAILABLE\nto start charging.</string>
    <string name="status_charging">Charging…</string>
    <string name="status_locked">Locked.</string>
    <string name="status_wait_unlock">Waiting for unlock.</string>
    <string name="status_unknown">Unknown state: </string>
    <string name="status_attrs_missing">Attribute status and status description missing.</string>
    <string name="status_not_connected">NOT Connected to my.wallbox.com\nPower Off-On wallbox (fuse ?)\nLogin account correct ?</string>
    <string name="txt_are_you_sure_exit">Are you sure you want to exit ?</string>
    <string name="txt_really_exit">Exit WandDeuze !</string>
    <string name="nbrReceivedChargerStatus">Display number of received charger statusses</string>
    <string name="login_account">Login account</string>
    <string name="settings">Settings</string>
    <string name="charger">Charger</string>
    <string name="language">Language: English</string>

    <string name="pref_lang_label_dutch" translatable="false">Nederlands</string>
    <string name="pref_lang_label_english" translatable="false">English</string>
    <string name="pref_lang_label_french" translatable="false">Français</string>
    <string name="pref_lang_label_german" translatable="false">Deutsch</string>
    <string name="pref_lang_label_norway" translatable="false">Norge</string>
    <string name="pref_lang_label_spanish" translatable="false">Español</string>
    <string name="pref_lang_label_swedish" translatable="false">Svenska</string>

    <string name="pref_lang_dutch_value" translatable="false">nl</string>
    <string name="pref_lang_english_value" translatable="false">en</string>
    <string name="pref_lang_french_value" translatable="false">fr</string>
    <string name="pref_lang_german_value" translatable="false">de</string>
    <string name="pref_lang_norway_value" translatable="false">nb</string>
    <string name="pref_lang_spanish_value" translatable="false">es</string>
    <string name="pref_lang_swedish_value" translatable="false">sv</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_user_pwd">Username, password, charger Id or not Online ?\n</string>
    <string name="software_update">"Software update available: "</string>
    <string name="missing_attribute">"Missing attribute: "</string>
    <string name="last_session">"Last session: "</string>
    <string name="todays_total">"Today\'s total: "</string>
    <string name="dispayEnergyData">Display avalable energy data</string>

</resources>